# upnpclient_m

./: pyproject.toml
examples/: action_call.py
upnpclient_m/: ssdp.py
