[tool.poetry]
name = "upnpclient_m"
version = "1.0.3"
description = "Python 3 library for accessing uPnP devices, with modification to pass back the local IP of the discovering device."
authors = ["Ellis Percival <flyte@failcode.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/an0ndev/upnpclient_m"
keywords = ["upnp"]
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0.0"
six = "^1.0.0"
python-dateutil = "^2.0.0"
lxml = "^4.0.0"
ifaddr = "^0.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"
tox = "^3.0.0"
flake8 = "^3.0.0"
pytest-cov = "^2.0.0"
mock = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
